--- a/public/source/assets/dest/css/style.css
+++ b/public/source/assets/dest/css/style.css
@@ -1909,6 +1909,17 @@ line-height:35px
     font-size: 18px
 }
 
+.flash-del-mini {
+    text-decoration:line-through;
+    margin-right:10px;
+    font-size: 15px
+}
+
+.flash-sale-mini {
+    color:#f90;
+    font-size: 15px
+}
+
 /* ==========================================================================
     11.2 RIBBON
 ============================================================================= */
